K8s/apache.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache-deployment
  namespace: online-shop-prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: apache
  template:
    metadata:
      name: apache
      labels:
        app: apache
    spec:
      containers:
      - name: apache
        image: httpd:latest 
        ports:
        - containerPort: 80
