K8s/service-apache.yml
kind: Service
apiVersion: v1
metadata:
  name: apache-service
  namespace: online-shop-prod
spec:
  selector:
    app: apache
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
