K8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: online-shop
  namespace: online-shop-prod
spec:
  type: ClusterIP
  selector:
    app: online-shop
  ports:
  - name: http
    port: 5173
    targetPort: 80
