K8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: online-shop-ingress
  namespace: online-shop-prod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  rules:
  -  http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: online-shop
            port:
              number: 5173
      - pathType: Prefix
        path: /apache
        backend:
          service:
            name: apache-service
            port:
              number: 80
